Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-598

Memory crash in racer test when open the object just deleted by other

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.1.0
    • Lustre 2.1.0
    • None
    • 3
    • 4908

      Lustre: DEBUG MARKER: == runracer test 1: racer on clients: RHEL5-nasf-CSW DURATION=120 =================================== 08:35:20 (1313368520)^M
      LustreError: 11151:0:(layout.c:1646:__req_capsule_get()) ASSERTION(fmt != LP_POISON) failed^M
      LustreError: 11151:0:(layout.c:1646:__req_capsule_get()) LBUG^M
      Pid: 11151, comm: rm^M
      ^M
      Call Trace:^M
      [<00000000f8c1c5c0>] libcfs_debug_dumpstack+0x50/0x70 [libcfs]^M
      [<00000000f8c1cd5d>] lbug_with_loc+0x6d/0xd0 [libcfs]^M
      [<00000000f8c2ca56>] libcfs_assertion_failed+0x66/0x70 [libcfs]^M
      [<00000000f8fb767b>] __req_capsule_get+0x86b/0x970 [ptlrpc]^M
      [<00000000c042e4b5>] run_timer_softirq+0x3a/0x1d0^M
      [<00000000c042ad57>] tasklet_action+0x77/0x11c^M
      [<00000000f8fb783c>] req_capsule_server_get+0x1c/0x20 [ptlrpc]^M
      [<00000000f9ec9615>] ll_och_fill+0x35/0x820 [lustre]^M
      [<00000000c0620512>] schedule+0x9be/0xa47^M
      [<00000000f9ed12c9>] ll_local_open+0xa9/0x520 [lustre]^M
      [<00000000f9347712>] it_open_error+0x62/0x180 [mdc]^M
      [<00000000f9edca0a>] ll_file_open+0xa5a/0x1650 [lustre]^M
      [<00000000f9eb0f80>] ll_dir_open+0x0/0x210 [lustre]^M
      [<00000000f9eb0fcc>] ll_dir_open+0x4c/0x210 [lustre]^M
      [<00000000c04848eb>] may_open+0x5a/0x203^M
      [<00000000c047823b>] file_move+0x27/0x32^M
      [<00000000c0475c77>] __dentry_open+0xc7/0x1ab^M
      [<00000000c0475dbf>] nameidata_to_filp+0x19/0x28^M
      [<00000000c0475df9>] do_filp_open+0x2b/0x31^M
      [<00000000c0475e3d>] do_sys_open+0x3e/0xae^M
      [<00000000c0475eda>] sys_open+0x16/0x18^M
      [<00000000c0404f4b>] syscall_call+0x7/0xb^M
      <IRQ> ^M
      Kernel panic - not syncing: LBUG^M
      Memory for crash kernel (0x0 to 0x0) notwithin permissible range^M

            yong.fan nasf (Inactive)
            yong.fan nasf (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: